--- a/style.css
+++ b/style.css
@@ -23,6 +23,24 @@ body {
   padding: 0% 5%;
 }
 
+.display.top {
+  align-items: center;
+  justify-content: right;
+  height: 40%;
+  font-size: 60%;
+  display: flex;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.display.bottom {
+  height: 60%;
+  font-size: 90%;
+  align-items: center;
+  justify-content: right;
+  display: flex;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 .button.container {
   height: 65%;
   margin-bottom: 5%;
