--- a/style.css
+++ b/style.css
@@ -29,6 +29,8 @@ body {
   height: 40%;
   font-size: 60%;
   display: flex;
+  white-space: nowrap;
+  overflow: hidden;
   font-family: Arial, Helvetica, sans-serif;
 }
 
