--- a/style.css
+++ b/style.css
@@ -43,73 +43,16 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.gridclr {
-  grid-area: gridclr;
-}
-.gridpm {
-  grid-area: gridpm;
-}
-.gridbck {
-  grid-area: gridbck;
-}
-.griddiv {
-  grid-area: griddiv;
-}
-.grid7 {
-  grid-area: grid7;
-}
-.grid8 {
-  grid-area: grid8;
-}
-.grid9 {
-  grid-area: grid9;
-}
-.gridx {
-  grid-area: gridx;
-}
-.grid4 {
-  grid-area: grid4;
-}
-.grid5 {
-  grid-area: grid5;
-}
-.grid6 {
-  grid-area: grid6;
-}
-.gridm {
-  grid-area: gridm;
-}
-.grid1 {
-  grid-area: grid1;
-}
-.grid2 {
-  grid-area: grid2;
-}
-.grid3 {
-  grid-area: grid3;
-}
-.gridp {
-  grid-area: gridp;
+.gridequalsign {
+  grid-area: 5/4/6/5;
 }
 .grid0 {
-  grid-area: grid0;
-}
-.griddec {
-  grid-area: griddec;
-}
-.gride {
-  grid-area: gride;
+  grid-area: 5/1/6/3;
 }
 .button.container {
   height: 65%;
   margin-bottom: 5%;
   display: grid;
-  grid-template-areas:
-    "gridclr gridpm gridbck griddiv"
-    "grid7 grid8 grid9 gridx"
-    "grid4 grid5 grid6 gridm"
-    "grid1 grid2 grid3 gridp"
-    "grid0 grid0 griddec gride";
 }
 
 .button .button {
